ci: 修复 Homebrew cask 文件测试流程
- 移除对 $CHANGED_FILES 变量的引号，解决文件路径解析问题
- 在两个测试步骤中应用相同的修改，确保测试流程一致性

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
           echo "$CHANGED_FILES"
           
           # 对每个修改的cask文件执行测试
-          for file in "$CHANGED_FILES"; do
+          for file in $CHANGED_FILES; do
             cask=$(basename "$file" .rb)
             echo "===== Testing Cask: $cask ====="
             
@@ -88,7 +88,7 @@ jobs:
           echo "$CHANGED_FILES"
           
           # 对每个修改的cask文件执行测试
-          for file in "$CHANGED_FILES"; do
+          for file in $CHANGED_FILES; do
             cask=$(basename "$file" .rb)
             echo "===== Testing Cask: $cask ====="
             
