--- a/.github/workflows/livecheck-autoupdate.yml
+++ b/.github/workflows/livecheck-autoupdate.yml
@@ -12,9 +12,13 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      issues: write
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.HOMEBREW_GITHUB_API_TOKEN || github.token }}
 
       - name: 设置 Homebrew
         uses: Homebrew/actions/setup-homebrew@master
@@ -32,7 +36,6 @@ jobs:
         run: |
           # 创建一个临时文件来存储更新的 cask 名称和PR编号
           touch updated_casks.txt
-          touch pr_numbers.txt
           
           # 遍历所有 cask 文件
           for cask_file in $CASKS; do
@@ -56,14 +59,15 @@ jobs:
                 --no-style \
                 --message="由自动更新工作流提交" \
                 --version="$latest_version" \
-                "$cask_name" | tee /dev/tty)
+                "$cask_name")
               
-              # 提取 PR 编号
-              pr_number=$(echo "$pr_output" | grep -o 'https://github.com/.*\/pull\/[0-9]\+' | grep -o '[0-9]\+$' || echo "")
+              # 提取 PR 编号 - 修改匹配模式以适应不同的输出格式
+              pr_number=$(echo "$pr_output" | grep -o 'https://github.com/[^ ]*/pull/[0-9]\+' | grep -o '[0-9]\+$' || 
+                        echo "$pr_output" | grep -o 'Created pull request.*#[0-9]\+' | grep -o '#[0-9]\+' | tr -d '#' || 
+                        echo "")
               
               if [ -n "$pr_number" ]; then
-                echo "$cask_name" >> updated_casks.txt
-                echo "$pr_number" >> pr_numbers.txt
+                echo "$cask_name: $curr_version -> $latest_version (PR #$pr_number)" >> updated_casks.txt
                 
                 # 直接自动合并 PR
                 echo "自动合并 PR #$pr_number..."
@@ -77,14 +81,13 @@ jobs:
           # 检查是否有任何 cask 被更新
           if [ -s updated_casks.txt ]; then
             echo "UPDATED=true" >> $GITHUB_ENV
-            echo "UPDATED_CASKS=$(cat updated_casks.txt | tr '\n' ' ')" >> $GITHUB_ENV
-            echo "PR_NUMBERS=$(cat pr_numbers.txt | tr '\n' ' ')" >> $GITHUB_ENV
+            echo "UPDATED_CASKS=$(cat updated_casks.txt)" >> $GITHUB_ENV
           else
             echo "UPDATED=false" >> $GITHUB_ENV
           fi
         env:
-          HOMEBREW_GITHUB_API_TOKEN: ${{ github.token }}
-          GH_TOKEN: ${{ github.token }}
+          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.HOMEBREW_GITHUB_API_TOKEN || github.token }}
+          GH_TOKEN: ${{ secrets.HOMEBREW_GITHUB_API_TOKEN || github.token }}
 
       - name: 创建摘要
         if: env.UPDATED == 'true'
@@ -93,15 +96,8 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "已为以下 cask 创建并尝试自动合并更新 PR：" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          
-          # 将 UPDATED_CASKS 和 PR_NUMBERS 转换为数组
-          IFS=' ' read -r -a casks <<< "$UPDATED_CASKS"
-          IFS=' ' read -r -a prs <<< "$PR_NUMBERS"
-          
-          for i in "${!casks[@]}"; do
-            cask="${casks[$i]}"
-            pr="${prs[$i]}"
-            echo "- $cask (PR #$pr)" >> $GITHUB_STEP_SUMMARY
+          echo "$UPDATED_CASKS" | while IFS= read -r line; do
+            echo "- $line" >> $GITHUB_STEP_SUMMARY
           done
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.HOMEBREW_GITHUB_API_TOKEN || github.token }}
