--- a/.github/workflows/livecheck-autoupdate.yml
+++ b/.github/workflows/livecheck-autoupdate.yml
@@ -34,8 +34,11 @@ jobs:
       - name: 检查更新并更新版本
         id: update-casks
         run: |
-          # 创建一个临时文件来存储更新的 cask 名称和PR编号
+          # 创建一个临时文件来存储更新的 cask 名称
           touch updated_casks.txt
+          
+          # 获取当前时间戳作为唯一标识符
+          timestamp=$(date +%s)
           
           # 遍历所有 cask 文件
           for cask_file in $CASKS; do
@@ -52,8 +55,18 @@ jobs:
             if [ "$curr_version" != "$latest_version" ] && [ "$latest_version" != "null" ]; then
               echo "$cask_name 可更新: $curr_version -> $latest_version"
               
+              # 使用唯一的分支名，包含时间戳
+              branch_name="bump-${cask_name}-${latest_version}-${timestamp}"
+              
+              # 删除远程可能存在的同名分支
+              git fetch origin
+              if git ls-remote --heads origin "${branch_name}" | grep -q "${branch_name}"; then
+                echo "远程分支 ${branch_name} 已存在，尝试删除..."
+                git push origin --delete "${branch_name}" || true
+              fi
+              
               # 使用 brew bump-cask-pr 命令创建更新 PR，添加 --no-fork 参数
-              pr_output=$(brew bump-cask-pr \
+              pr_output=$(HOMEBREW_BUMP_CASK_PR_BRANCH="${branch_name}" brew bump-cask-pr \
                 --no-browse \
                 --no-audit \
                 --no-style \
@@ -73,6 +86,8 @@ jobs:
                 # 直接自动合并 PR
                 echo "自动合并 PR #$pr_number..."
                 gh pr merge "$pr_number" --merge --auto --delete-branch
+              else
+                echo "创建 PR 失败，输出: $pr_output"
               fi
             else
               echo "$cask_name 已是最新版本 ($curr_version)"
