ci: 优化删除远程分支的方法
- 使用 GitHub API 删除远程分支，替代 git 命令
- 提高了操作的可靠性和效率

--- a/.github/workflows/livecheck-autoupdate.yml
+++ b/.github/workflows/livecheck-autoupdate.yml
@@ -65,7 +65,7 @@ jobs:
               git fetch origin
               if git ls-remote --heads origin "${branch_name}" | grep -q "${branch_name}"; then
                 echo "远程分支 ${branch_name} 已存在，尝试删除..."
-                git push origin --delete "${branch_name}" || true
+                gh api -X DELETE "repos/${GITHUB_REPOSITORY}/git/refs/heads/${branch_name}" || true
               fi
               
               # 使用 brew bump-cask-pr 命令创建更新 PR，添加 --no-fork 参数
