ci: 更新自动更新工作流中的 PR 标题和链接格式
- 修改 PR 标题中的版本号为最新的上游版本号
- 更新 PR 链接格式以包含仓库名称
- 调整 PR 编号提取逻辑以适应新的输出格式

--- a/.github/workflows/livecheck-autoupdate.yml
+++ b/.github/workflows/livecheck-autoupdate.yml
@@ -92,7 +92,7 @@ jobs:
                 --no-fork \
                 --message="由自动更新工作流提交" \
                 --version="$latest_version" \
-                "$cask_name")
+                "${GITHUB_REPOSITORY}/${cask_name}")
               
               # 提取 PR 编号 - 修改匹配模式以适应不同的输出格式
               pr_number=$(echo "$pr_output" | grep -o 'https://github.com/[^ ]*/pull/[0-9]\+' | grep -o '[0-9]\+$' || 
