ci: 添加调试信息以排查 autobump 动作的问题
- 在 CASKS 和 PREFIXED_CASKS 变量处理过程中添加了调试输出
- 在设置 autobump_list 输出变量前添加了调试信息

--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -46,7 +46,10 @@ jobs:
               PREFIXED_CASKS="$REPO/$cask"
             fi
           done
+          echo "调试信息 - 原始 CASKS: $CASKS"
+          echo "调试信息 - 带前缀的 PREFIXED_CASKS: $PREFIXED_CASKS"
           echo "autobump_list=$PREFIXED_CASKS" >> "$GITHUB_OUTPUT"
+          echo "调试信息 - 最终设置的 autobump_list: $PREFIXED_CASKS"
 
       - name: Bump casks
         uses: Homebrew/actions/bump-packages@master
