ci: 修改自动更新仓库路径
- 将自动更新流程中的仓库路径从默认的 github.repository 修改为固定的 "zhiyue/mytab"
- 此修改确保自动更新流程在特定的仓库中执行，避免潜在的路径错误

--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Get list of autobump casks
         id: autobump
         run: |
-          REPO="${{ github.repository }}"
+          REPO="zhiyue/mytab"
           CASKS=$(xargs < "$(brew --repo $REPO)"/.github/autobump.txt)
           PREFIXED_CASKS=""
           for cask in $CASKS; do
