ci: 修正自动更新流程中的仓库名称
- 将变量 REPO 的值从 "zhiyue/mytab" 修改为 "zhiyue/mytap"
- 这个修改确保了自动更新流程能够正确获取 cask 列表

--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Get list of autobump casks
         id: autobump
         run: |
-          REPO="zhiyue/mytab"
+          REPO="zhiyue/mytap"
           CASKS=$(xargs < "$(brew --repo $REPO)"/.github/autobump.txt)
           PREFIXED_CASKS=""
           for cask in $CASKS; do
