ci: 添加调试输出以验证 autobump_list 变量设置
- 在 autobump 步骤后添加新的调试步骤
- 输出 autobump_list 变量的值，以确保正确设置

--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -51,6 +51,10 @@ jobs:
           echo "autobump_list=$PREFIXED_CASKS" >> "$GITHUB_OUTPUT"
           echo "调试信息 - 最终设置的 autobump_list: $PREFIXED_CASKS"
 
+      - name: 调试 autobump_list 输出变量
+        run: |
+          echo "调试 steps.autobump.outputs.autobump_list: ${{ steps.autobump.outputs.autobump_list }}"
+
       - name: Bump casks
         uses: Homebrew/actions/bump-packages@master
         continue-on-error: true
