refactor(bump-packages): 修改默认 fork 作者并增加调试信息
- 将默认 fork 作者从 'Homebrew' 修改为 'zhiyue'
- 增加了对 INPUT_CASKS 原始内容的调试输出
- 增加了对解析后的 casks 数组的调试输出
- 增加了对即将执行的 brew bump 命令的调试输出
- 在 brew bump 命令中添加了 --verbose 参数以获取更多详细信息

--- a/actions/bump-packages/action.yml
+++ b/actions/bump-packages/action.yml
@@ -19,7 +19,7 @@ inputs:
   fork:
     description: Use a fork when opening a PR
     required: false
-    default: ${{ github.repository_owner != 'Homebrew' }}
+    default: ${{ github.repository_owner != 'zhiyue' }}
 runs:
   using: composite
   steps:
@@ -47,7 +47,13 @@ runs:
           NO_FORK="--no-fork"
         fi
         IFS=" " read -r -a casks <<<"${INPUT_CASKS}"
-        brew bump $NO_FORK --open-pr --casks "${casks[@]}"
+        echo "调试信息 - INPUT_CASKS 原始内容: ${INPUT_CASKS}"
+        echo "调试信息 - 解析后的 casks 数组:"
+        for cask in "${casks[@]}"; do
+          echo "  - $cask"
+        done
+        echo "调试信息 - 即将执行的命令: brew bump $NO_FORK --open-pr --casks \"${casks[@]}\""
+        brew bump $NO_FORK --open-pr --casks "${casks[@]}" --verbose
       shell: bash
       if: inputs.casks != ''
       env:
