ci: 为 bump-packages 动作添加 tap 输入参数
为 bump-packages GitHub Action 添加了一个新的 tap 输入参数，允许在调用时指定 tap 名称。在 autobump 工作流程中使用了这个新参数，确保在执行 brew bump 命令时能够正确指定 tap。

- 在 autobump.yml 中添加 tap 参数，默认为 'homebrew/cask'
- 在 action.yml 中添加 tap 输入定义，并在 brew bump 命令中使用该参数

--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -62,5 +62,6 @@ jobs:
           token: ${{ secrets.HOMEBREW_CASK_REPO_WORKFLOW_TOKEN || github.token }}
           fork: false
           casks: ${{ github.event.inputs.casks || steps.autobump.outputs.autobump_list }}
+          tap: ${{ github.repository || 'homebrew/cask' }}
         env:
           HOMEBREW_TEST_BOT_AUTOBUMP: 1
