--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -51,6 +51,17 @@ jobs:
           echo "autobump_list=$PREFIXED_CASKS" >> "$GITHUB_OUTPUT"
           echo "调试信息 - 最终设置的 autobump_list: $PREFIXED_CASKS"
 
+      # 如果需要切换到自定义 tap
+      - name: Tap custom repository
+        run: |
+          brew tap zhiyue/mytap https://github.com/zhiyue/homebrew-mytap.git
+      
+      # 切换到 tap 目录才能针对它进行操作
+      - name: Change to tap directory
+        run: |
+          cd "$(brew --repository zhiyue/mytap)"
+          echo "TAP_DIR=$(pwd)" >> $GITHUB_ENV
+          
       - name: 调试 autobump_list 输出变量
         run: |
           echo "调试 steps.autobump.outputs.autobump_list: ${{ steps.autobump.outputs.autobump_list }}"
