--- a/actions/bump-packages/action.yml
+++ b/actions/bump-packages/action.yml
@@ -55,8 +55,8 @@ runs:
         for cask in "${casks[@]}"; do
           echo "  - $cask"
         done
-        echo "调试信息 - 即将执行的命令: brew bump $NO_FORK --open-pr --casks \"${casks[@]}\""
-        brew bump $NO_FORK --tap "${INPUT_TAP}" --open-pr --casks "${casks[@]}" --verbose
+        echo "调试信息 - 即将执行的命令: brew bump $NO_FORK --tap \"${INPUT_TAP}\" --open-pr --casks \"${casks[@]}\""
+        brew bump $NO_FORK --tap "${INPUT_TAP}" --open-pr  --verbose
       shell: bash
       if: inputs.casks != ''
       env:
