--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -51,28 +51,27 @@ jobs:
           echo "autobump_list=$PREFIXED_CASKS" >> "$GITHUB_OUTPUT"
           echo "调试信息 - 最终设置的 autobump_list: $PREFIXED_CASKS"
 
-      # 如果需要切换到自定义 tap
-      - name: Tap custom repository
-        run: |
-          brew tap zhiyue/mytap https://github.com/zhiyue/homebrew-mytap
-      
-      # 切换到 tap 目录才能针对它进行操作
-      - name: Change to tap directory
-        run: |
-          cd "$(brew --repository zhiyue/mytap)"
-          echo "TAP_DIR=$(pwd)" >> $GITHUB_ENV
-
-      - name: 调试 autobump_list 输出变量
-        run: |
-          echo "调试 steps.autobump.outputs.autobump_list: ${{ steps.autobump.outputs.autobump_list }}"
-
       - name: Bump casks
-        uses: zhiyue/homebrew-mytap/actions/bump-packages@main
-        continue-on-error: true
-        with:
-          token: ${{ secrets.HOMEBREW_CASK_REPO_WORKFLOW_TOKEN || github.token }}
-          fork: false
-          casks: ${{ github.event.inputs.casks || steps.autobump.outputs.autobump_list }}
-          tap: ${{ github.repository || 'homebrew/cask' }}
-        env:
-          HOMEBREW_TEST_BOT_AUTOBUMP: 1
+        run: |
+          brew bump --no-fork --tap "zhiyue/homebrew-mytap" --open-pr
+      
+    #   # 切换到 tap 目录才能针对它进行操作
+    #   - name: Change to tap directory
+    #     run: |
+    #       cd "$(brew --repository zhiyue/mytap)"
+    #       echo "TAP_DIR=$(pwd)" >> $GITHUB_ENV
+
+    #   - name: 调试 autobump_list 输出变量
+    #     run: |
+    #       echo "调试 steps.autobump.outputs.autobump_list: ${{ steps.autobump.outputs.autobump_list }}"
+
+    #   - name: Bump casks
+    #     uses: zhiyue/homebrew-mytap/actions/bump-packages@main
+    #     continue-on-error: true
+    #     with:
+    #       token: ${{ secrets.HOMEBREW_CASK_REPO_WORKFLOW_TOKEN || github.token }}
+    #       fork: false
+    #       casks: ${{ github.event.inputs.casks || steps.autobump.outputs.autobump_list }}
+    #       tap: ${{ github.repository || 'homebrew/cask' }}
+    #     env:
+    #       HOMEBREW_TEST_BOT_AUTOBUMP: 1
