--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -54,24 +54,9 @@ jobs:
       - name: Bump casks
         run: |
           brew bump --no-fork --tap "zhiyue/homebrew-mytap" --open-pr
+        env:
+          HOMEBREW_TEST_BOT_AUTOBUMP: 1
+          HOMEBREW_GITHUB_PACKAGES_USER: "zhiyue"
+          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.HOMEBREW_CASK_REPO_WORKFLOW_TOKEN || github.token }}
+          HOMEBREW_DEVELOPER: "1"
       
-    #   # 切换到 tap 目录才能针对它进行操作
-    #   - name: Change to tap directory
-    #     run: |
-    #       cd "$(brew --repository zhiyue/mytap)"
-    #       echo "TAP_DIR=$(pwd)" >> $GITHUB_ENV
-
-    #   - name: 调试 autobump_list 输出变量
-    #     run: |
-    #       echo "调试 steps.autobump.outputs.autobump_list: ${{ steps.autobump.outputs.autobump_list }}"
-
-    #   - name: Bump casks
-    #     uses: zhiyue/homebrew-mytap/actions/bump-packages@main
-    #     continue-on-error: true
-    #     with:
-    #       token: ${{ secrets.HOMEBREW_CASK_REPO_WORKFLOW_TOKEN || github.token }}
-    #       fork: false
-    #       casks: ${{ github.event.inputs.casks || steps.autobump.outputs.autobump_list }}
-    #       tap: ${{ github.repository || 'homebrew/cask' }}
-    #     env:
-    #       HOMEBREW_TEST_BOT_AUTOBUMP: 1
