ci(autobump): 更新 brew bump 命令参数
- 添加 --full-name 参数以使用完整名称进行更新
- 添加 --cask 参数指定更新类型为 Cask
- 添加 --debug 参数启用调试模式

--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Bump casks
         run: |
-          brew bump --no-fork --tap "zhiyue/homebrew-mytap" --open-pr
+          brew bump --full-name --no-fork --tap "zhiyue/homebrew-mytap" --open-pr --cask --debug
         env:
           HOMEBREW_TEST_BOT_AUTOBUMP: 1
           HOMEBREW_GITHUB_PACKAGES_USER: "zhiyue"
