--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -123,21 +123,58 @@ jobs:
             brew uninstall --cask "$cask"
           done
 
-      - name: Test changed Casks (Workflow Dispatch)
+      - name: Get PR Info (Workflow Dispatch)
+        id: get-pr-info
         if: github.event_name == 'workflow_dispatch' && github.event.inputs.pr_number != ''
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          result-encoding: string
+          script: |
+            const prNumber = '${{ github.event.inputs.pr_number }}';
+            console.log(`Getting info for PR #${prNumber}`);
+            
+            try {
+              const { data: pullRequest } = await github.rest.pulls.get({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: parseInt(prNumber)
+              });
+              
+              const { data: files } = await github.rest.pulls.listFiles({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: parseInt(prNumber)
+              });
+              
+              // 筛选出 Casks 目录下的文件
+              const caskFiles = files
+                .filter(file => file.filename.startsWith('Casks/') && file.filename.endsWith('.rb'))
+                .map(file => file.filename);
+              
+              return JSON.stringify({
+                headRefName: pullRequest.head.ref,
+                caskFiles: caskFiles
+              });
+            } catch (error) {
+              console.error(`Error getting PR info: ${error}`);
+              return '{}';
+            }
+
+      - name: Test changed Casks (Workflow Dispatch)
+        if: github.event_name == 'workflow_dispatch' && github.event.inputs.pr_number != '' && steps.get-pr-info.outputs.result != '{}'
         run: |
+          # 解析PR信息
+          PR_INFO='${{ steps.get-pr-info.outputs.result }}'
           PR_NUMBER="${{ github.event.inputs.pr_number }}"
           echo "Testing PR #$PR_NUMBER"
           
-          # 获取PR信息
-          PR_INFO=$(gh pr view $PR_NUMBER --json headRefName,files)
-          
-          # 提取分支名称
+          # 提取分支名称和变更的文件
           BRANCH_NAME=$(echo "$PR_INFO" | jq -r '.headRefName')
           echo "PR branch: $BRANCH_NAME"
           
           # 获取变更的文件
-          CHANGED_FILES=$(echo "$PR_INFO" | jq -r '.files[].path' | grep '^Casks/.*\.rb$' || true)
+          CHANGED_FILES=$(echo "$PR_INFO" | jq -r '.caskFiles[]')
           
           if [ -z "$CHANGED_FILES" ]; then
             echo "No Cask files changed in this PR."
@@ -172,8 +209,6 @@ jobs:
             echo "Uninstalling $cask..."
             brew uninstall --cask "$cask"
           done
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   auto-merge:
     needs: test-bot
