ci: 为 brew 命令添加 tap 参数
- 在 audit、style、install 和 uninstall 命令中添加 --tap 参数
- 指定 tap 为当前仓库的路径，确保正确执行相关操作

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -195,19 +195,19 @@ jobs:
             
             # 审计cask
             echo "Auditing $cask..."
-            brew audit --cask --online "$cask"
+            brew audit --tap "${{ github.repository }}" --cask --online "$cask"
             
             # 检查代码风格
             echo "Running style check for $cask..."
-            brew style --fix --cask "$cask" || true
+            brew style --tap "${{ github.repository }}" --fix --cask "$cask" || true
             
             # 安装cask
             echo "Installing $cask..."
-            brew install --cask "$cask"
+            brew install --tap "${{ github.repository }}" --cask "$cask"
             
             # 卸载cask
             echo "Uninstalling $cask..."
-            brew uninstall --cask "$cask"
+            brew uninstall --tap "${{ github.repository }}" --cask "$cask"
           done
 
   auto-merge:
